<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.solosu.mtforum.ui.home.HomeFragment"
        android:label="@string/tab_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_community"
        android:name="com.solosu.mtforum.ui.community.CommunityFragment"
        android:label="@string/tab_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.solosu.mtforum.ui.message.MessagePlaceholderFragment"
        android:label="@string/tab_message" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.solosu.mtforum.ui.profile.ProfileFragment"
        android:label="@string/tab_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>